- Added word-wrap class to wrap long text in column to fix mobile device issue

--- a/app/assets/stylesheets/app-template.css.scss
+++ b/app/assets/stylesheets/app-template.css.scss
@@ -28,6 +28,12 @@ body {
     margin-bottom: 10px;
   }
 
+  .word-break {
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+  }
+
   footer {
     padding-top: 10px;
     border-top: 1px solid #cccccc;
